@@ -1,5 +1,7 @@
 Revision history for Perl extension Module::Build.
 
+ - Support get_action_docs() =head2 style. [ewilhelm]
+
  - Reworked _detildefy with regexp instead of glob(). [ewilhelm]
 
  - Workaround Test::Pod::Coverage @INC bug. [Eric Wilhelm]
